# h264-encoding

./: CMakeLists.txt  README.md
src/: BFrame.cpp  BFrame.h  Frame.cpp  Frame.h  H264_Compression.cpp  H264_Compression.h  IFrame.cpp  IFrame.h  PFrame.cpp  PFrame.h  h264.cpp
